# api-frete

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/infra/api/: api.py  repositories.py
src/infra/databases/: db.py
src/shipping_service/domain/product/: entities.py
src/shipping_service/domain/shipping/: entities.py  enums.py  exceptions.py
src/shipping_service/usecases/product/: dtos.py
src/shipping_service/usecases/shipping/: dtos.py  services.py  storage.py
tests/infra/: test_api.py
tests/shipping_service/domain/shipping/: test_entities.py
tests/shipping_service/usecases/: test_services.py
